--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ footer{
 
 footer p{
     margin: 0 auto;
+    padding: 10px 0;
     background-color: #333;
     color: white;
     text-align: center;
